# Gamba.NET

./: GambaDotnet.sln
EqSat/: Cargo.toml  test-input.txt
EqSat/expr-utils/: Cargo.toml  build.rs
EqSat/expr-utils/src/: gamba_expression.lalrpop  lib.rs  main.rs  s_expression.lalrpop
EqSat/src/: bitwise_list.rs  classification.rs  const_fold.rs  cost.rs  main.rs  simba.rs
EqSat/src/rules/: bitwise_power_of_two.rs  duplicate_children_mul_add.rs  mod.rs  rewrite_power.rs
Gamba.Prototyping/: Gamba.Prototyping.csproj  Program.cs  StringUtility.cs
Gamba.Prototyping/Transpiled/: Batch.cs  CollectionExtensions.cs  Node.cs  NullableI32.cs  Range.cs
Gamba.Prototyping/Transpiler/: Foo.cs  GambaParser.cs  OwnershipTree.cs  PythonParser.cs  PythonToCSharp.cs  Refiner.cs  reutil.cs
Gamba.UnitTests/: UnitTest1.cs
GambaDotnet/: ArbitraryPrecisionInteger.cs  Assert.cs  GambaDotnet.csproj  Node.cs
GambaDotnet/Extensions/: Z3Extensions.cs
GambaDotnet/Parsing/: AstParser.cs  AstTranslationVisitor.cs  Egg.g4  Parser.cs
GambaDotnet/RewriteRules/: RewriteRules.cs
GambaDotnet/TestingUtils/: GambaDataset.cs  MbaDataset.cs  MbaDatasetLoader.cs
GambaDotnet/Transpiled/: CollectionExtensions.cs  GambaParser.cs  IndexWithMultitude.cs  ListUtil.cs  Node.cs  NullableI32.cs  NullableI64.cs  Range.cs
python-transpiler/: .gitignore  .gitmodules  Cargo.toml  output.cs
python-transpiler/PostProcessor/: PostProcessor.cs  PostProcessor.sln  Program.cs
python-transpiler/src/: main.rs  output.cs  test.py
