[package]
name = "expr-utils"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "expr-converter"

[dependencies]
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"

[build-dependencies]
lalrpop = "0.19.7"